added trust potal apis
